project(T3DSharpGenerator LANGUAGES CSharp)

FILE(GLOB_RECURSE GLOB_SRCS *.cs)
FILE(GLOB_RECURSE GLOB_TEMPLATE_SRCS *.scriban)

SET(CMAKE_CSharp_FLAGS "${CMAKE_CSharp_FLAGS} /unsafe")

add_executable(${PROJECT_NAME}
  # TODO replace with explicit sources
  ${GLOB_SRCS}
  ${GLOB_TEMPLATE_SRCS}
)

set_source_files_properties(
   ${GLOB_TEMPLATE_SRCS} PROPERTIES
   VS_COPY_TO_OUT_DIR "PreserveNewest"
)

# Set CLR assembly properties.
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES
    VS_DOTNET_REFERENCES "System;System.Core;System.Runtime.InteropServices"
    VS_PACKAGE_REFERENCES "Scriban_2.1.4"
    VS_GLOBAL_ROOTNAMESPACE ${PROJECT_NAME}
    VS_GLOBAL_GenerateAssemblyInfo false
    VS_GLOBAL_GenerateTargetFrameworkAttribute false
)

# Setup installer.
INSTALL(TARGETS ${PROJECT_NAME} EXPORT ${PROJECT_NAME}Config
    ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBRARY_DIR}
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBRARY_DIR}
    RUNTIME DESTINATION ${CMAKE_INSTALL_BINARY_DIR}
    INCLUDES DESTINATION ${CMAKE_INSTALL_INCLUDE_DIR}
)

# Export config.
INSTALL(EXPORT ${PROJECT_NAME}Config DESTINATION ${CMAKE_CURRENT_SOURCE_DIR})
EXPORT(TARGETS ${PROJECT_NAME} FILE ${PROJECT_NAME}Config.cmake)

IF(NOT CMAKE_BUILD_TYPE OR CMAKE_BUILD_TYPE MATCHES "Debug|RelWithDebInfo")
   SET_PROPERTY(TARGET ${PROJECT_NAME} PROPERTY VS_GLOBAL_EnableUnmanagedDebugging "true")
ENDIF (NOT CMAKE_BUILD_TYPE OR CMAKE_BUILD_TYPE MATCHES "Debug|RelWithDebInfo")
